fixed like half of the merge conflicts